Add some unit-tests for OrderService